--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^1.1.4",
     "axios": "^0.21.1",
-    "element-plus": "2.1.7",
-    "vue": "3.2.31",
+    "element-plus": "1.0.2-beta.52",
+    "vue": "^3.1.2",
     "vue-cropperjs": "^5.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.10",
@@ -20,9 +19,9 @@
     "wangeditor": "^4.7.4"
   },
   "devDependencies": {
+    "vite": "2.3.7",
     "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/compiler-sfc": "^3.1.2",
-    "vite": "2.3.7"
+    "@vue/compiler-sfc": "^3.1.2"
   },
   "browserslist": [
     "> 1%",
